--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -41,8 +41,8 @@ jobs:
           uses: docker/build-push-action@v2 
           with:
             push: true
-            tags: alexsavin03/yamdb_final:latest
-            
+            tags: alexsavin03/yamdb_final
+
   # deploy:
   #   runs-on: ubuntu-latest
   #   needs: build_and_push_to_docker_hub
