--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -37,11 +37,13 @@ jobs:
           with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
+        - name: Go to directory with Dockerfile
+          run: cd api_yamdb
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2 
           with:
             push: true
-            tags: alexsavin03/yamdb_final
+            tags: alexsavin03/yamdb_final:latest
 
   # deploy:
   #   runs-on: ubuntu-latest
