--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -38,7 +38,7 @@ jobs:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
         - name: Go to directory with Dockerfile
-          run: cd api_yamdb
+          run: cd api_yamdb/
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2 
           with:
