--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -26,6 +26,11 @@ jobs:
     - name: Pytest
       run: pytest
   build_and_push_to_docker_hub:
+      on:
+        push:
+          branches:
+            - main
+            - master
       name: Push Docker image to Docker Hub
       runs-on: ubuntu-latest
       needs: tests
@@ -39,9 +44,6 @@ jobs:
           with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
-        # - name: Go to directory with Dockerfile
-        #   run: cd api_yamdb/
-
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2 
           with:
@@ -70,7 +72,10 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker-compose up -d 
+            sudo docker-compose up -d
+            sudo docker-compose exec web python manage.py migrate
+            docker-compose exec web python manage.py collectstatic --no-input 
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
