--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -26,14 +26,10 @@ jobs:
     - name: Pytest
       run: pytest
   build_and_push_to_docker_hub:
+      if: github.ref == 'refs/heads/master'
       name: Push Docker image to Docker Hub
       runs-on: ubuntu-latest
       needs: tests
-      if:
-        push:
-          branches:
-            - main
-            - master
       steps:
         - name: Check out the repo
           uses: actions/checkout@v2 
@@ -48,7 +44,6 @@ jobs:
           uses: docker/build-push-action@v2 
           with:
             context: api_yamdb/
-            push: true
             tags: alexsavin03/yamdb_final:latest
 
   deploy:
